--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,19 +25,54 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": {
-                "owner": "cpp",
-                "fileLocation": "absolute",
-                "pattern": [
-                    {
-                        "regexp": "^(.*):(\\d+):\\s+(error|warning|note) (\\d+):\\s+([\\s\\S]*)$",
-                        "file": 1,
-                        "line": 2,
-                        "severity": 3,
-                        "message": 5
-                    }
-                ]
-            }
+            "problemMatcher": [
+                {
+                    "owner": "cpp",
+                    "fileLocation": "absolute",
+                    "pattern": [
+                        {
+                            "regexp": "(ERROR|WARNING|NOTE|INFO) C(\\d*) IN LINE (\\d*) OF (.*): (.*)",
+                            "file": 4,
+                            "line": 3,
+                            "code": 2,
+                            "severity": 1,
+                            "message": 5
+                        }
+                    ]
+                },
+                {
+                    "owner": "cpp",
+                    "fileLocation": "absolute",
+                    "pattern": [
+                        {
+                            "regexp": "(ERROR|WARNING|NOTE|INFO) L(\\d*): (.*)",
+                            "code": 2,
+                            "severity": 1,
+                            "message": 3,
+                        },
+                        {
+                            "regexp": ": (.*)",
+                            "line": 1,
+                        },
+                        {
+                            "regexp": ": (.*) ((.*))",
+                            "file": 1,
+                        }
+                    ]
+                }
+            ]
+        },
+        {
+            "label": "clean",
+            "type": "shell",
+            "command": "del",
+            "args": [
+                "/f",
+                "/s",
+                "/q",
+                "\"${workspaceFolder}\\build\""
+            ],
+            "problemMatcher": []
         }
     ]
 }
